--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Main Page Title</h1>
+
+    <h4>Level 4 Heading </h4>
+
+    <h6>Smallest heading</h6>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptatem sequi eaque excepturi quisquam! Hic ipsum
+        sed non quia dignissimos?</p>
+    <a href="https://www.linkedin.com/feed/" target="_blank">Open Linkedin</a>
+    <a href="newpage.html">Go to new page </a>
+
+    <img src="SAVE_20240429_122824.jpg" alt="" width="500" />
+
+    <img src="https://th.bing.com/th/id/R.34500b53fd8a6d39cbf8b4df40265f68?rik=VOvo5K%2b39xXm5A&riu=http%3a%2f%2fwww.cartoonbucket.com%2fwp-content%2fuploads%2f2015%2f03%2fSmiling-Picture-Of-Nobita.jpg&ehk=7uKpIZX5CltSIxysB4TZXICsObXpPH4x94p%2bzu1Pg3I%3d&risl=&pid=ImgRaw&r=0"
+        alt="yfyf" width="400">
+    <video src="Utkarsh_2k23.mp4" controls></video>    
+
+
 </body>
+
 </html>
