--- a/newpage.html
+++ b/newpage.html
@@ -9,14 +9,32 @@
         h1{
             text-align:center; 
             text-decoration: 2px underline red dashed;
+            color: green;
         }
+        .myclass{
+            background-color: aquamarine ;
+            color: red;
+        
+        }
+        #someid{
+            color: blue;
+            font-size: 40px;
+        }
+
     </style>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <p style="font-size: 50px; color: #1714b9;" >Inline CSS is used to style individual elements at once </p>
 
-    <h1>Internal CSS is used o style multiple tags at once </h1>
-    <h1>Name Selectors are used to select elements by their tag name </h1>
+    <h1>Internal CSS is used to style multiple tags at once </h1>
+    <h1 class="myclass">Name Selectors are used to select elements by their tag name </h1>
+
+    <h3 class="myclass">CLASS Selectors are used to select elements by their class name </h3>
+
+    <p id="someid" class="myclass" >ID selectors are used to select elements by their id name </p>
+    <button class="btn">Submit</button>
 </body>
 </html>
