--- a/login.html
+++ b/login.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />    
+
     <style>
+
+        *{
+             font-family: Noto Sans; 
+        }
 
         .card{
             border: 3px solid rgb(236, 216, 216);
@@ -16,12 +22,17 @@
             box-shadow: 2px 2px 5px 0px #e1bfbfb0;
 
             border-radius: 5px;
+            background-color: white;
+
         }
         body{
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+
+            background-image: url("https://wallpapercave.com/wp/wp7485716.jpg");
+            background-size: cover;
         }
         .card-title, .card-subtitle{
             text-align: center;
