--- a/admissionform.html
+++ b/admissionform.html
@@ -31,7 +31,7 @@
 
 
         <label for="address">Permanent Address</label>
-        <textarea name="address" rows="4" cols="20"   id=""></textarea>
+        <textarea name="address" rows="4" cols="20"   id="address"></textarea>
 
     
         <button>Submit</button>
