--- a/productlist.html
+++ b/productlist.html
@@ -13,19 +13,21 @@
 </head>
 <body>
     <header class="p-4">
-        <div class="hero bg-cover bg-center h-[50vh] rounded-x1 p-8">
+        <div class="hero bg-cover bg-center h-[70vh] rounded-x1 p-8 lg:p-16">
             
-            <div class="grid">
+            <div class="grid grid-cols-12 gap-0 gap-y-8 md:gap-x-16 items-center h-full ">
+                <div class="col-span-12 md:col-span-8">
+                    <h1 class="text-8xl font-bold">Sale Is Live</h1>
+                    <br>
+                    <p class="text-2xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis sapiente corrupti unde perferendis veniam asperiores alias provident labore quidem accusantium.</p>
+                    <input type="text" placeholder= "Search Product..." class="px-5 py-3 mt-5 w-1/2 rounded-full" >
+                </div>
 
-            </div>
-                <h1>Sale Is Live</h1>
-            </div>
-
-            <div>
-                <img class="w-[400px]" src="undraw_empty_cart_co35.png" alt="">
+            <div class="col-span-12 md:col-span-4">
+                <img class="w-full" src="undraw_empty_cart_co35.png" alt="">
             </div>
     </header>
-    <div class="w-11/12 mx-auto mt-36">
+    <div class="w-11/12 mx-auto mt-8">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 x1:grid-cols-4 gap-8">
             <div class=" rounded-md shadow-lg">
                 <img class="rounded-md" src="https://wallpapercave.com/wp/wp6128206.jpg" alt="">
